Change default page to expensePage on app load

--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@ function exportReportPDF(){
   doc.save('report.pdf');
 }
 
-// افتراضي عرض صفحة الحسابات أولاً
-showPage('usersPage');
+// افتراضي عرض صفحة إضافة المصروفات عند فتح التطبيق
+showPage('expensePage');
 render();
 </script>
 </body>
